# auditable-voting

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  ansible.cfg  deploy.env.example  eligible-voters.json  nvim.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy-pages.yml  static.yml  worker-release.yml
.nsite/: config.json
.planning/: BACKLOG.md  BOOTSTRAP.md  DECISIONS.md  DONE.md  LOG.md  NEXT.md  NOW.md  RISKS.md  STATUS.md  STATUS3.md  STATUS4.md  TODO.md  TODO2.md  TODO3.md  TODO4.MD  TODO5.md  TODO6.md  TODO7.md  TODO8.md  TODO9.md  TODOv2.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: demo-receipt-root-stall.md  demo-spent-tree-root.md
.planning/redesigned/: 01.md  02_simplified.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  11.md  110.md  111.md  112.md  113.md  12.md  (+20 more)
ansible/: inventory.example  playbook.yml
auditable-voting-core/: Cargo.toml
auditable-voting-core/src/: ballot_state.rs  coordinator_engine.rs  coordinator_messages.rs  coordinator_state.rs  diagnostics.rs  error.rs  event.rs  lib.rs  openmls_engine.rs  order.rs  public_state.rs  reducer.rs  replay.rs  snapshot.rs  types.rs  validation.rs  versioning.rs  wasm.rs
coordinator/: derive-coordinator-keys.py  requirements.txt  voter-requirements.txt  voting-coordinator-client.py  voting-request-proof.py
docs/: 01-system-design.md  02-protocol-reference.md  03-quorum-model.md  04-event-interop.md  05-voter-integration-guide.md  06-per-election-keysets.md  07-coordinator-http-api.md  08-tally-implementation.md  09-issuance-client-design.md  10-demo-implementation.md  11-vps-deployment.md  12-local-mint-deployment.md  13-deploy-and-prepare.md  15-coordinator-deployment.md  16-coordinator-test-plan.md  17-integration-test-plan.md  20-integration-log.md  21-proof-flow-fixes.md  22-branding-and-signer.md  24-friday-demo-bug.md  25-client-only-migration.md  25-multi-coordinator-implementation-status.md  25-stale-issuance-state-fix.md  25-tally-500-bug.md  26-issuance-status-key-mismatch.md  27-project-explainer.md  branding-and-signer-plan.md  cashu-nostr-voting-design.md  demo-development-plan.md  deploy-and-prepare-plan.md  feat-frontend-transplant-plan.md  fips-integration-plan.md  integration-plan.md  integration-test-plan.md  marmot-migration-plan.md  per-election-keysets.md  phases  playwright-e2e-test-plan.md  project-explainer.html  project-explainer.md  (+5 more)
presentation/: project-overview.html  slides.html  why-auditable-voting-is-hard-and-possible.html
scripts/: deploy-mint.sh  install-nutshell.sh  list-mints.sh  remove-mint.sh  run-tests.py  setup-vps.sh  teardown.sh  watch-tests.sh
src/: cli.ts  merkle.ts  mint.ts  nostrClient.ts  nostrPublishQueue.ts  voterConfig.ts  voterServer.ts
tests/: conftest.py  conftest_e2e.py  conftest_voter.py  conftest_vps.py  requirements.txt  test-voter-nsec.env  test_coordinator_deploy.py  test_coordinator_e2e.py  test_coordinator_eligibility.py  test_coordinator_info.py  test_coordinator_integration.py  test_coordinator_integration_vps.py  test_coordinator_issuance.py  test_coordinator_issuance_status.py  test_coordinator_issuance_tracking.py  test_coordinator_issuance_tracking_edges.py  test_coordinator_persistence.py  test_coordinator_tally.py  test_domain_deploy.py  test_e2e_voting.py  test_election_keysets.py  test_integration_readiness.py  test_merkle_tree_e2e.py  test_merkle_trees.py  test_multi_coordinator.py  test_publish_tally_events.py  test_signer.py  test_ui_dashboard.py  test_ui_fixes.py  test_ui_issuance.py  test_ui_voting.py  test_voter_flow.py
web/: dashboard.html  index.html  package-lock.json  package.json  simple-coordinator.html  simple.html  start.sh  tsconfig.json  vite.config.ts  vote.html
web/rust-core/: Cargo.toml
web/rust-core/src/: lib.rs
worker/: .env.example  Cargo.toml  README.md
worker/contrib/systemd/: auditable-voting-worker.service
worker/src/: config.rs  main.rs  model.rs  store.rs
(+199 files in other folders)
