[package]
name = "auditable-voting-core"
version = "0.1.0"
edition = "2021"
description = "Rust/Wasm coordinator control and replay core for the auditable-voting browser client"
repository = "https://github.com/tidley/auditable-voting"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
openmls-engine = [
    "dep:base64",
    "dep:getrandom_0_2",
    "dep:openmls",
    "dep:openmls_basic_credential",
    "dep:openmls_memory_keystore",
    "dep:openmls_rust_crypto",
    "dep:openmls_traits",
]

[dependencies]
base64 = { version = "0.22", optional = true }
getrandom_0_2 = { package = "getrandom", version = "0.2.17", features = ["js"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
wasm-bindgen = "0.2"
openmls = { version = "0.8.1", features = ["js"], optional = true }
openmls_basic_credential = { version = "0.5.0", features = ["clonable"], optional = true }
openmls_memory_keystore = { version = "0.2.0", optional = true }
openmls_rust_crypto = { version = "0.5.1", optional = true }
openmls_traits = { version = "0.5.0", optional = true }
