[package]
name = "auditable-voting-worker"
version = "0.1.0"
edition = "2021"
description = "Delegated Nostr worker for auditable-voting elections"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
