[package]
name = "auditable-voting-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bech32 = "0.11"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
